--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 	
-	<title>Magister - Free html5 template by GetTemplate</title>
+	<title>Bred Crew Entertainment</title>
 
 	<link rel="shortcut icon" href="assets/images/gt_favicon.png">
 	
@@ -30,9 +30,9 @@
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Hello</a></li>
-				<li><a href="#about">About me</a></li>
-				<li><a href="#themes">Themes</a></li>
+				<li><a href="#head" class="active">Mission</a></li>
+				<li><a href="#about">Entertainment</a></li>
+				<li><a href="#themes">Apparel</a></li>
 				<li><a href="#contact">Get in touch</a></li>
 			</ul>
 		</div>
@@ -48,13 +48,13 @@
 			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">	
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
-				<h1 class="title">Magister</h1>
-				<h2 class="subtitle">Free html5 template by GetTemplate</h2>
+				<h1 class="title">Bred Crew Entertainment</h1>
+				<h2 class="subtitle">Find your passion and pursue it Relentlessly</h2>
 
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
-					Potentially, the best place to tell people why they are here.<br>
-					So, this is a demo page built to showcase the beauty of the template.
+					We are a talent collective.   <br>
+					If you are an artist, model, actor, engineer this is a demo page built to showcase the beauty of the template.
 				</h3>
 				
 				<!-- Nice place to describe your site in a sentence or two -->
