--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				<li><a href="#head" class="active">Mission</a></li>
-				<li><a href="#about">Entertainment</a></li>
+				<li><a href="#about">Talent</a></li>
 				<li><a href="#themes">Apparel</a></li>
 				<li><a href="#contact">Get in touch</a></li>
 			</ul>
@@ -53,8 +53,8 @@
 
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
-					We are a talent collective.   <br>
-					If you are an artist, model, actor, engineer this is a demo page built to showcase the beauty of the template.
+					We are a Talent Collective.    <br>
+					Our mission is to inspire people to discover their passions and pursue it relentlessly. you are an artist, model, actor, engineer this is a demo page built to showcase the beauty of the template.
 				</h3>
 				
 				<!-- Nice place to describe your site in a sentence or two -->
