--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
 					We are a Talent Collective.    <br>
-					Our mission is to inspire people to discover their passions and pursue it relentlessly. you are an artist, model, actor, engineer this is a demo page built to showcase the beauty of the template.
+					Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions.
 				</h3>
 				
 				<!-- Nice place to describe your site in a sentence or two -->
