--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
 				<h1 class="title">Bred Crew Entertainment</h1>
-				<h2 class="subtitle">Find your passion and pursue it Relentlessly</h2>
+				<h2 class="subtitle">Music. Film. Nightlife.</h2>
 
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
@@ -146,17 +146,17 @@
 <section class="section" id="contact">
 	<div class="container">
 	
-		<h2 class="text-center title">Get in touch</h2>
+		<h2 class="text-center title">Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions.</h2>
 
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead">Have a question about this template, or want to suggest a new feature?</p>
-				<p>Feel free to email me, or drop me a line in Twitter!</p>
-				<p><b>gt@gettemplate.com</b><br><br></p>
+				<p class="lead">Talented? Passionate? </p>
+				<p>Get down with our crew.</p>
+				<p><b>staybred@gmail.com</b><br><br></p>
 				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-github fa-fw"></i> Github</a></li>
-					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></li>
+					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
+					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
+					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
 				</ul>
 			</div>
 		</div>
