--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</h3>
 				
 				<!-- Nice place to describe your site in a sentence or two -->
-				<p><a href="/download/" class="btn btn-default btn-lg">Download template now</a></p>
+				<p><a href="/services/" class="btn btn-default btn-lg">Work with us.</a></p>
 	
 			</div> <!-- /col -->
 		</div> <!-- /row -->
@@ -146,11 +146,11 @@
 <section class="section" id="contact">
 	<div class="container">
 	
-		<h2 class="text-center title">Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions.</h2>
+		<h2 class="text-center title">Talented? Passionate? </h2>
 
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead">Talented? Passionate? </p>
+				<p class="lead">Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions. </p>
 				<p>Get down with our crew.</p>
 				<p><b>staybred@gmail.com</b><br><br></p>
 				<ul class="list-inline list-social">
