--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <section class="section" id="themes">
 	<div class="container">
 	
-		<h2 class="text-center title">More Themes</h2>
+		<h2 class="text-center title">Talent</h2>
 		<p class="lead text-center">
 			Huge thank you to all people who publish<br>
 			their photos at <a href="http://unsplash.com">Unsplash</a>, thank you guys!
@@ -110,8 +110,8 @@
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot4.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Matt Cash</h3>
+						<p>Winner of Season 1 of Bravos Kandi Factory. Matt Cash is a multi-talented entertainer. You can find him in the studio engineering the next radio hit or on the screen where he is recognised as an up and coming actor.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
@@ -120,8 +120,8 @@
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot5.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Llwellyn Radford</h3>
+						<p> "Lou" first got into the entertainment industry when he was modeling during his college days at Hampton University and began his acting career as a background actor on "The Box". </p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
