--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="assets/screenshots/sshot4.jpg" alt="">
+					<img src="assets/images/matt_cash.jpg" alt="">
 					<div class="caption">
 						<h3>Matt Cash</h3>
 						<p>Winner of Season 1 of Bravos Kandi Factory. Matt Cash is a multi-talented entertainer. You can find him in the studio engineering the next radio hit or on the screen where he is recognised as an up and coming actor.</p>
