--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				<li><a href="#head" class="active">Mission</a></li>
-				<li><a href="#about">Talent</a></li>
-				<li><a href="#themes">Apparel</a></li>
+				<li><a href="#themes">Talent</a></li>
+				<li><a href="#about">Apparel</a></li>
 				<li><a href="#contact">Get in touch</a></li>
 			</ul>
 		</div>
@@ -98,17 +98,17 @@
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">
 				<div class="thumbnail">
-					<img src="assets/screenshots/sshot1.jpg" alt="">
+					<img src="assets/images/wahab.jpeg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Wahab Owolabi</h3>
+						<p>Entrepreneur and a founding partner of Bred Crew Entertainment. Wahab is originally from Queens, NY and moved to LA to further his entrepreneurial passions and establish his place in the entertainment industry. More than just a business man, he is a published model, and aspiring actor. With a passion for education and entertainment.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="assets/screenshots/matt_cash.jpg" alt="">
+					<img src="assets/images/matt_cash.jpg" alt="">
 					<div class="caption">
 						<h3>Matt Cash</h3>
 						<p>Winner of Season 1 of Bravos Kandi Factory. Matt Cash is a multi-talented entertainer. You can find him in the studio engineering the next radio hit or on the screen where he is recognised as an up and coming actor.</p>
@@ -130,8 +130,8 @@
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot3.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Cameron Blanks</h3>
+						<p>A founding partner of Bred Crew Entertainment. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
