--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<img src="assets/images/wahab.jpeg" alt="">
 					<div class="caption">
 						<h3>Wahab Owolabi</h3>
-						<p>Entrepreneur and a founding partner of Bred Crew Entertainment. Wahab is originally from Queens, NY and moved to LA to further his entrepreneurial passions and establish his place in the entertainment industry. More than just a business man, he is a published model, and aspiring actor. With a passion for education and entertainment.</p>
+						<p>Entrepreneur and a founding partner of Bred Crew Entertainment. Wahab is originally from Queens, NY. He moved to LA to pursue his entrepreneurial passions and establish his place in the entertainment industry. More than just a business man, he is a published model, and aspiring actor. With a passion for education and entertainment.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
