--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 				<p>Get down with our crew.</p>
 				<p><b>staybred@gmail.com</b><br><br></p>
 				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
-					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
+					<li><a href="https://instagram.com/bredcrew" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
+					<li><a href="https://twitter.com/bredcrew" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
+					<li><a href="http://facebook.com/bredcrew" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
 				</ul>
 			</div>
 		</div>
