--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Mission</a></li>
-				<li><a href="#themes">Talent</a></li>
+				<li><a href="#head" class="active">About</a></li>
+				<li><a href="#themes">Music</a></li>
+				<li><a href="#about">Events</a></li>
 				<li><a href="#about">Apparel</a></li>
-				<li><a href="#contact">Get in touch</a></li>
+				<li><a href="#about">The Crew</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -49,13 +51,12 @@
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
 				<h1 class="title">Bred Crew Entertainment</h1>
-				<h2 class="subtitle">Music. Film. Nightlife.</h2>
+				<h2 class="subtitle">Pursue Your Passion. Relentlessly.</h2>
 
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
-					We are a Talent Collective.    <br>
-					Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions.
-				</h3>
+					What does it mean to be "BRED"?.    <br>
+					Being "BRED" does not happen overnight. It is a process that begins with identifying a passion whether it be music, acting, modeling, writing etc and making the decision to pursue it regardless of whatever obstacles might come your way. BCE is a lifestyle company and full service talent management agency. Get Bred and join The Crew.  
 				
 				<!-- Nice place to describe your site in a sentence or two -->
 				<p><a href="/services/" class="btn btn-default btn-lg">Work with us.</a></p>
