--- a/sample.html
+++ b/sample.html
@@ -30,10 +30,12 @@
 			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Home</a></li>
-				<!-- <li><a href="#about">About me</a></li> -->
-				<!-- <li><a href="#themes">The Crew</a></li> -->
-				<!-- <li><a href="#contact">Get in touch</a></li> -->
+				<li><a href="#head" class="active">About</a></li>
+				<li><a href="#themes">Music</a></li>
+				<li><a href="#about">Events</a></li>
+				<li><a href="#about">Apparel</a></li>
+				<li><a href="#about">The Crew</a></li>
+				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</div>
 	</div>
@@ -49,22 +51,15 @@
 
 				<!-- Site Title, your name, HELLO msg, etc. -->
 				<h1 class="title">Bred Crew Entertainment</h1>
-				<h2 class="subtitle">Believe Rise Endure Deliver</h2>
+				<h2 class="subtitle">Pursue Your Passion. Relentlessly.</h2>
 
 				<!-- Short introductory (optional) -->
 				<h3 class="tagline">
-					BCE is a lifestyle company and full service talent management agency. 
-					
-					<p>Get BRED.</p>
-				<p><b>staybred@gmail.com</b><br><br></p>
-				</h3>
-
+					What does it mean to be "BRED"?.    <br>
+					Being "BRED" does not happen overnight. It is a process that begins with identifying a passion whether it be music, acting, modeling, writing etc and making the decision to pursue it regardless of whatever obstacles might come your way. BCE is a lifestyle company and full service talent management agency. Get Bred and join The Crew.  
 				
-				<ul class="list-inline list-social">
-					<li><a href="https://instagram.com/bredcrew" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
-					<li><a href="https://twitter.com/bredcrew" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="http://facebook.com/bredcrew" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
-				</ul>
+				<!-- Nice place to describe your site in a sentence or two -->
+				<p><a href="/services/" class="btn btn-default btn-lg">Work with us.</a></p>
 	
 			</div> <!-- /col -->
 		</div> <!-- /row -->
@@ -96,7 +91,7 @@
 <section class="section" id="themes">
 	<div class="container">
 	
-		<h2 class="text-center title">The Crew</h2>
+		<h2 class="text-center title">Talent</h2>
 		<p class="lead text-center">
 			Huge thank you to all people who publish<br>
 			their photos at <a href="http://unsplash.com">Unsplash</a>, thank you guys!
@@ -104,20 +99,20 @@
 		<div class="row">
 			<div class="col-sm-4 col-sm-offset-2">
 				<div class="thumbnail">
-					<img src="assets/screenshots/sshot1.jpg" alt="">
+					<img src="assets/images/wahab.jpeg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Wahab Owolabi</h3>
+						<p>Entrepreneur and a founding partner of Bred Crew Entertainment. Wahab is originally from Queens, NY. He moved to LA to pursue his entrepreneurial passions and establish his place in the entertainment industry. More than just a business man, he is a published model, and aspiring actor. With a passion for education and entertainment.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-4">
 				<div class="thumbnail">
-					<img src="assets/screenshots/sshot4.jpg" alt="">
+					<img src="assets/images/matt_cash.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Matt Cash</h3>
+						<p>Winner of Season 1 of Bravos Kandi Factory. Matt Cash is a multi-talented entertainer. You can find him in the studio engineering the next radio hit or on the screen where he is recognised as an up and coming actor.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
@@ -126,8 +121,8 @@
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot5.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Llwellyn Radford</h3>
+						<p> "Lou" first got into the entertainment industry when he was modeling during his college days at Hampton University and began his acting career as a background actor on "The Box". </p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
@@ -136,8 +131,8 @@
 				<div class="thumbnail">
 					<img src="assets/screenshots/sshot3.jpg" alt="">
 					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
+						<h3>Cameron Blanks</h3>
+						<p>A founding partner of Bred Crew Entertainment. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
 						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
 					</div>
 				</div>
@@ -152,17 +147,17 @@
 <section class="section" id="contact">
 	<div class="container">
 	
-		<h2 class="text-center title">Get in touch</h2>
+		<h2 class="text-center title">Talented? Passionate? </h2>
 
 		<div class="row">
 			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead">Have a question about this template, or want to suggest a new feature?</p>
-				<p>Feel free to email me, or drop me a line in Twitter!</p>
-				<p><b>gt@gettemplate.com</b><br><br></p>
+				<p class="lead">Our mission is to inspire and support talent in the discovery and relentless pursuit of their passions. </p>
+				<p>Get down with our crew.</p>
+				<p><b>staybred@gmail.com</b><br><br></p>
 				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-github fa-fw"></i> Github</a></li>
-					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></li>
+					<li><a href="https://instagram.com/bredcrew" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
+					<li><a href="https://twitter.com/bredcrew" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
+					<li><a href="http://facebook.com/bredcrew" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
 				</ul>
 			</div>
 		</div>
