--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
 			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
 				<li><a href="#head" class="active">Home</a></li>
-				<!-- <li><a href="#about">About me</a></li> -->
-				<!-- <li><a href="#themes">The Crew</a></li> -->
-				<!-- <li><a href="#contact">Get in touch</a></li> -->
+				<li><a href="#about">About me</a></li> 
+				<li><a href="#themes">The Crew</a></li>
+				<li><a href="#contact">Get in touch</a></li> 
 			</ul>
 		</div>
 	</div>
