--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<<<<<<< HEAD
+
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
@@ -32,7 +32,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Believe Rise Endure Deliver
+                    <i class="fa fa-play-circle"></i>  <span class="light">Believe. Rise. Endure. Deliver.
                 </a>
             </div>
 
@@ -47,7 +47,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#download">Shop</a>
+                        <a href="https://bredcrew.bigcartel.com/">Get Bred</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -64,8 +64,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Llewellyn Radford</h1>
-                        <p class="intro-text">"Dream on Dreamers"</p>
+                        <h1 class="brand-heading">BRED</h1>
+                        <p class="intro-text">"To inspire and support those in the discovery and relentless pursuit of passion and ambition"</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
@@ -80,10 +80,9 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Llewellyn</h2>
-                <p>Born in Bartow, Florida and raised in Newport News, Virginia. Llewellyn C. Radford II broke into the entertainment industry as a model while attending Hampton University. Pushed by his mother to attend an open casting call, Llewellyn gained his first acting experience as a background actor on the $30 Million Warner Bros picture  <a href="http://www.imdb.com/title/tt0362478/"> The Box </a> starring Cameron Diaz, James Marsden, and Frank Langella. The experience allowed him to discover his passion for acting.</p>
-                <p>While on a spontaneous trip to Chicago for the 4th of July in 2008 he cheated on modeling with acting and has never looked back. In October 2009, he stepped out on faith and decided to move to Los Angeles, California when his close friend <a href="http://weknowthedj.com/">DJ Tay James</a> was hired as Justin Bieber's official DJ. He landed at LAX with $500 and a single bag.  .</p>
-                <p>The past five years have been an incredible journey for Llewellyn. In that time he has been involved in numerous creative projects from acting, song writing, and spoken word poetry. To this day Llewellyn continues to chase his dreams and lives to inspire others every step of the way.</p>
+                <h2>BRED Crew</h2>
+                <p>To inspire and support those in the discovery and relentless pursuit of passion and ambition
+                </p>
             </div>
         </div>
     </section>
@@ -130,164 +129,4 @@
     <script src="js/grayscale.js"></script>
 
 </body>
-
-=======
-<!-- use "theme-invert" class on bright backgrounds, also try "text-shadows" class -->
-<body class="theme-invert">
-
-<nav class="mainmenu">
-	<div class="container">
-		<div class="dropdown">
-			<button type="button" class="navbar-toggle" data-toggle="dropdown"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-			<!-- <a data-toggle="dropdown" href="#">Dropdown trigger</a> -->
-			<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-				<li><a href="#head" class="active">Home</a></li>
-				<li><a href="#about">About me</a></li> 
-				<li><a href="#themes">The Crew</a></li>
-				<li><a href="#contact">Get in touch</a></li> 
-			</ul>
-		</div>
-	</div>
-</nav>
-
-
-<!-- Main (Home) section -->
-<section class="section" id="head">
-	<div class="container">
-
-		<div class="row">
-			<div class="col-md-10 col-lg-10 col-md-offset-1 col-lg-offset-1 text-center">	
-
-				<!-- Site Title, your name, HELLO msg, etc. -->
-				<h1 class="title">Bred Crew Entertainment</h1>
-				<h2 class="subtitle">Believe Rise Endure Deliver</h2>
-
-				<!-- Short introductory (optional) -->
-				<h3 class="tagline">
-					BCE is a lifestyle company and full service talent management agency. 
-					
-					<p>Get BRED.</p>
-				<p><b>staybred@gmail.com</b><br><br></p>
-				</h3>
-
-				
-				<ul class="list-inline list-social">
-					<li><a href="https://instagram.com/bredcrew" class="btn btn-link"><i class="fa fa-instagram fa-fw"></i> Instagram</a></li>
-					<li><a href="https://twitter.com/bredcrew" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="http://facebook.com/bredcrew" class="btn btn-link"><i class="fa fa-facebook fa-fw"></i> Facebook</a></li>
-				</ul>
-	
-			</div> <!-- /col -->
-		</div> <!-- /row -->
-	
-	</div>
-</section>
-
-<!-- Second (About) section -->
-<section class="section" id="about">
-	<div class="container">
-	
-		<h2 class="text-center title">About me</h2>
-		<div class="row">
-			<div class="col-sm-4 col-sm-offset-2">    
-				<h5><strong>Where's my lorem ipsum?<br></strong></h5>
-				<p>Well, here it is: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum, ullam, ducimus, eaque, ex autem est dolore illo similique quasi unde sint rerum magnam quod amet iste dolorem ad laudantium molestias enim quibusdam inventore totam fugit eum iusto ratione alias deleniti suscipit modi quis nostrum veniam fugiat debitis officiis impedit ipsum natus ipsa. Doloremque, id, at, corporis, libero laborum architecto mollitia molestiae maxime aut deserunt sed perspiciatis quibusdam praesentium consectetur in sint impedit voluptates! Deleniti, sequi voluptate recusandae facere nostrum?</p>    
-			</div>
-			<div class="col-sm-4">
-				<h5><strong>More, more lipsum!<br></strong></h5>    
-				<p>Tempore, eos, voluptatem minus commodi error aut eaque neque consequuntur optio nesciunt quod quibusdam. Ipsum, voluptatibus, totam, modi perspiciatis repudiandae odio ad possimus molestias culpa optio eaque itaque dicta quod cupiditate reiciendis illo illum aspernatur ducimus praesentium quae porro alias repellat quasi cum fugiat accusamus molestiae exercitationem amet fugit sint eligendi omnis adipisci corrupti. Aspernatur.</p>    
-				<h5><strong>Author links<br></strong></h5>    
-				<p><a href="http://be.net/pozhilov9409">Behance</a> / <a href="https://twitter.com/serggg">Twitter</a> / <a href="http://linkedin.com/pozhilov">LinkedIn</a> / <a href="https://www.facebook.com/pozhilov">Facebook</a></p>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!-- Third (Works) section -->
-<section class="section" id="themes">
-	<div class="container">
-	
-		<h2 class="text-center title">The Crew</h2>
-		<p class="lead text-center">
-			Huge thank you to all people who publish<br>
-			their photos at <a href="http://unsplash.com">Unsplash</a>, thank you guys!
-		</p>
-		<div class="row">
-			<div class="col-sm-4 col-sm-offset-2">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot1.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot4.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4 col-sm-offset-2">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot5.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-4">
-				<div class="thumbnail">
-					<img src="assets/screenshots/sshot3.jpg" alt="">
-					<div class="caption">
-						<h3>Thumbnail label</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque doloribus enim vitae nam cupiditate eius at explicabo eaque facere iste.</p>
-						<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-					</div>
-				</div>
-			</div>
-
-		</div>
-
-	</div>
-</section>
-
-<!-- Fourth (Contact) section -->
-<section class="section" id="contact">
-	<div class="container">
-	
-		<h2 class="text-center title">Get in touch</h2>
-
-		<div class="row">
-			<div class="col-sm-8 col-sm-offset-2 text-center">
-				<p class="lead">Have a question about this template, or want to suggest a new feature?</p>
-				<p>Feel free to email me, or drop me a line in Twitter!</p>
-				<p><b>gt@gettemplate.com</b><br><br></p>
-				<ul class="list-inline list-social">
-					<li><a href="https://twitter.com/serggg" class="btn btn-link"><i class="fa fa-twitter fa-fw"></i> Twitter</a></li>
-					<li><a href="https://github.com/pozhilov" class="btn btn-link"><i class="fa fa-github fa-fw"></i> Github</a></li>
-					<li><a href="http://linkedin/in/pozhilov" class="btn btn-link"><i class="fa fa-linkedin fa-fw"></i> LinkedIn</a></li>
-				</ul>
-			</div>
-		</div>
-
-	</div>
-</section>
-
-
-<!-- Load js libs only when the page is loaded. -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script src="assets/js/modernizr.custom.72241.js"></script>
-<!-- Custom template scripts -->
-<script src="assets/js/magister.js"></script>
-</body>
->>>>>>> origin/master
 </html>
