--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="https://bredcrew.bigcartel.com/">Get Bred</a>
+                        <a href="https://bredcrew.bigcartel.com/">Shop/a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -81,8 +81,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>BRED Crew</h2>
-                <p>To inspire and support those in the discovery and relentless pursuit of passion and ambition
-                </p>
+                <p>To inspire and support those in the discovery and relentless pursuit of passion and ambition  <a href="http://www.imdb.com/title/tt0362478/"> The Box </a> To inspire and support those in the discovery and relentless pursuit of passion and ambition.</p>
+                <p>WTo inspire and support those in the discovery and relentless pursuit of passion and ambition<a href="http://weknowthedj.com/">DJ Tay James</a> To inspire and support those in the discovery and relentless pursuit of passion and ambition</p>
+                <p>To inspire and support those in the discovery and relentless pursuit of passion and ambition</p>
             </div>
         </div>
     </section>
