--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Stay BRED,
 C, V, & W
 Founders</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="https://bredcrew.bigcartel.com" class="btn btn-lg btn-default">Get BRED</a>
             </p>
           </div>
 
