--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>BRED Crew</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@ Stay BRED,
 C, V, & W
 Founders</p>
             <p class="lead">
-              <a href="https://bredcrew.bigcartel.com" class="btn btn-lg btn-default">Get BRED</a>
+              <a href="http://bredcrew.bigcartel.com" class="btn btn-lg btn-default">Get BRED</a>
             </p>
           </div>
 
