--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Our Story</h1>
-            <p class="lead">Believe. Rise. Endure. Deliver.
+            <p class="lead">Believe. Rise. Endure. Deliver.<p>
 
-Success requires an individual to Believe in themselves, Rise above the competition, Endure through setbacks, and Deliver results. Whether you got up everyday to shoot free throws at 6am or you stayed in on a Saturday night to study for that final. You are BRED.   
+<p>Success requires an individual to Believe in themselves, Rise above the competition, Endure through setbacks, and Deliver results. Whether you got up everyday to shoot free throws at 6am or you stayed in on a Saturday night to study for that final. You are BRED. <p> 
 
-The three of us share the BRED mentality but being BRED was never enough. We each supported one another through failures and triumphs. We created BRED Crew to build a community that inspires and supports each other in the discovery and relentless pursuit of passion, ambition, success.
+<p>The three of us share the BRED mentality but being BRED was never enough. We each supported one another through failures and triumphs. We created BRED Crew to build a community that inspires and supports each other in the discovery and relentless pursuit of passion, ambition, success.<p>
 
-We are humbled everyday as passionate and ambitious creators, athletes, students, artists, doctors, and professionals from across the world join the movement. We look to you to inspire and support us as we Believe. Rise. Endure. Deliver. 
+<p>We are humbled everyday as passionate and ambitious creators, athletes, students, artists, doctors, and professionals from across the world join the movement. We look to you to inspire and support us as we Believe. Rise. Endure. Deliver.<p>
 
-Stay BRED,
+<p>Stay BRED,
 
 C, V, & W
 Founders</p>
