--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
 
 <p>We are humbled everyday as passionate and ambitious creators, athletes, students, artists, doctors, and professionals from across the world join the movement. We look to you to inspire and support us as we Believe. Rise. Endure. Deliver.<p>
 
-<p>Stay BRED,
+<p>Stay BRED,<p>
 
-C, V, & W
-Founders</p>
+<p>C, V, & W<p>
+<p>Founders</p>
             <p class="lead">
               <a href="http://bredcrew.bigcartel.com" class="btn btn-lg btn-default">Get BRED</a>
             </p>
