--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
+              <h3 class="masthead-brand">BRED Crew</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Lookbook</a></li>
+                  <li><a href="#">Entertainment</a></li>
+                  <li><a href="#">Lifestyle</a></li>
+                  <li><a href="#">Management</a></li>
                 </ul>
               </nav>
             </div>
