--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 <p>Stay BRED,<p>
 
-<p><a href="http://instagram.com/bredcrew">C</a>, <a href="http://instagram.com/vixwanders">V</a>, & <a href="http://instagram.com/pbnyc26">W,</a><p>
+<p><a href="http://instagram.com/cam_diggadee">C</a>, <a href="http://instagram.com/vixwanders">V</a>, & <a href="http://instagram.com/pbnyc26">W,</a><p>
 <p>Founders</p>
             <p class="lead">
               <a href="http://bredcrew.bigcartel.com" class="btn btn-lg btn-default">Get BRED</a>
